data/derived/fa15/progs/unify/prog3686.ml.out
Characters 43-44:
  explode w = listReverse w;;
                          ^
Error: This expression has type string but an expression was expected of type
         'a list
